# libmpdclient-vala

./: .gitignore  Makefile.am  autogen.sh  configure.ac
src/: main.vala
vapi/: libmpdclient.vapi
